# upcloud-migrator

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  RELEASE.md  pricing.json
.githooks/: commit-msg
.github/workflows/: automated-release.yml  ci.yml  conventional-commits.yml  release-please.yml  release.yml
demo/: compute.tf  database.tf  loadbalancer.tf  network.tf  outputs.tf  storage.tf  variables.tf
demo/aws/: outputs.tf  terraform.tfvars
demo/azure/: appgateway.tf  compute.tf  database.tf  monitoring.tf  network.tf  outputs.tf  providers.tf  storage.tf  variables.tf
src/: ai.rs  app.rs  graph.rs  main.rs  pricing.rs  todo.rs  zones.rs
src/migration/: generator.rs  mapper.rs  mod.rs  scorer.rs  types.rs  var_detector.rs
src/migration/providers/: mod.rs  shared.rs
src/migration/providers/aws/: compute.rs  database.rs  generator_support.rs  kubernetes.rs  loadbalancer.rs  mapper.rs  mod.rs  network.rs  storage.rs  var_detector.rs
src/migration/providers/azure/: compute.rs  database.rs  generator_support.rs  kubernetes.rs  mapper.rs  (+5 more)
src/terraform/: parser.rs  scanner.rs  types.rs
src/ui/: chat.rs  diff.rs  filebrowser.rs  generator.rs  mod.rs  pricing.rs  resources.rs  scanner.rs  splash.rs  summary.rs  theme.rs  todo.rs
test-fixtures/: webapp-azure-e2e.tf  webapp-e2e.tf
test-fixtures/infra/: database.tf  kubernetes.tf  loadbalancer.tf  main.tf  network.tf  storage.tf
test-fixtures/kube-example/: kube.tf  main.tf
test-fixtures/webapp/: compute.tf  database.tf  kubernetes.tf  loadbalancer.tf  network.tf  storage.tf  unsupported.tf
