[package]
name = "upcloud-migrate"
version = "0.4.0"
edition = "2024"
publish = false

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
tokio = { version = "1", features = ["full"] }
walkdir = "2"
hcl-rs = "0.18"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "2"
indexmap = "2"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
